# MY_PROJECTS

./: .gitignore  README.md
!C++/Just_C++_Projects/CMake/: CMakeLists.txt  main.cpp
!C++/Just_C++_Projects/CMake/CMake_Second/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CTestConfig.cmake  CTestTestfile.cmake  Cmake_Second.sln  Cmake_Second.vcxproj  Cmake_Second.vcxproj.filters  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
!C++/Just_C++_Projects/CMake/CMake_Second/Testing/: TAG
!C++/Just_C++_Projects/CMake/CMake_Second/Testing/20190813-0100/: Build.xml  Configure.xml  Done.xml  Test.xml
!C++/Just_C++_Projects/CMake/CMake_Second/Testing/20190813-1017/: Build.xml  Configure.xml  Done.xml  Test.xml
!C++/Just_C++_Projects/CMake/CMake_Second/Testing/20190813-1018/: Build.xml  Configure.xml  Done.xml  Test.xml
!C++/Just_C++_Projects/CMake/CMake_Second/Testing/Temporary/: CTestCostData.txt
!C++/Just_C++_Projects/CMake/CMake_Third/: CMakeLists.txt  CTestConfig.cmake  main.cpp
!C++/Just_C++_Projects/CMake/CPP_WEEKLY_CMAKE/: CMakeLists.txt  main.cpp
!C++/Just_C++_Projects/CMake/Cmake_First/: CMakeLists.txt  main.cpp
Algorithms_Library/: Algorithms_Library.sln
Chat_Java/: .classpath
(+218 files in other folders)
